feat(auth): сделан endpoint для смены пароля авторизованным юзером ([put] /auth/account/password) и дока
